--- a/parsley/Cargo.toml
+++ b/parsley/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 logos="0.12.0"
+ansi_term = "0.12"
 parsley-derive = { path = "../parsley-derive", optional=true }
 
 [features]
