parse bnf in the proc macro

--- a/parsley-derive/Cargo.toml
+++ b/parsley-derive/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 quote = "1.0.15"
 proc-macro2 = "1.0.33"
 syn = { version = "1.0.86", features = ["extra-traits"] }
+parsley = { path = "../parsley" }
+
 
 [lib]
 name = "parsley_derive"
