terminal symbol symtab available at compile time

--- a/parsley-derive/Cargo.toml
+++ b/parsley-derive/Cargo.toml
@@ -8,6 +8,7 @@ quote = "1.0.15"
 proc-macro2 = "1.0.33"
 syn = { version = "1.0.86", features = ["extra-traits"] }
 parsley = { path = "../parsley" }
+lazy_static = "1.4.0"
 
 
 [lib]
