--- a/parsley-example/Cargo.toml
+++ b/parsley-example/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 logos="0.12.0"
 parsley-derive = { path = "../parsley-derive" }
 parsley = { path = "../parsley" }
+lazy_static = "1.4.0"
