--- a/parsley/Cargo.toml
+++ b/parsley/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-logos="0.12.0"
-ansi_term = "0.12"
+parsley-derive = { path = "../parsley-derive", optional=true }
+parsley-util = { path = "../parsley-util" }
+
+[features]
+default = ["export_derive"]
+export_derive = ["parsley-derive"]
